[package]
name = "mori"
version = "0.1.0"
edition = "2018"
authors = ["Francisco Calderón <fjcalderon@gmail.com>"]
repository = "https://github.com/grunch/mori"
description = "A CLI descriptor-based wallet to be used to safely inherit bitcoin"
keywords = ["bitcoin", "wallet", "descriptor", "psbt", "miniscript", "inherit", "inheritance"]
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdk = { version = "0.9.0", default-features = false, features = ["electrum", "all-keys"]}
bitcoin = { version="0.26", features = ["rand"] }
anyhow = "1.0.40"
pico-args = "0.4.2"
base64 = "0.13.0"